--- a/gemini_llm_da.ipynb
+++ b/gemini_llm_da.ipynb
@@ -1,8 +1,18 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Nikhil1601/Data-analysis-using-gemini-LLM/blob/main/gemini_llm_da.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -135,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -498,7 +508,7 @@
         "id": "g-ef_16RIvnU",
         "outputId": "90cf2753-b071-438f-f771-fe7e941428e2"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -653,7 +663,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "9MhUyrOcoSVV"
       },
@@ -666,7 +676,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "14Pgp4zJoXXb"
       },
@@ -687,7 +697,7 @@
       "metadata": {
         "id": "RizLqJL2GW5L"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -704,7 +714,7 @@
       "metadata": {
         "id": "FrV6D-rX_Rs7"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -760,7 +770,7 @@
         "id": "INflF_1n_p86",
         "outputId": "942a2972-a50e-4681-8803-d68b96208523"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -812,7 +822,7 @@
         "id": "cjArVMIm4GqV",
         "outputId": "8c6c6cc4-f1c4-4d5e-c1b8-fb590cc0d11e"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -883,7 +893,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "DNs-Bu9Poe8B"
       },
@@ -942,7 +952,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1417,7 +1427,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
